# tetrisTutor

./: CMakeLists.txt  main.c
include/ncursesw/: ncurses.h  term.h
